=================================================
openadaptor3 production 3.4.1 Release Notes

See licence.txt for Licence information.
=================================================

Date: ??
Author: openadaptor Core Team

openadaptor 3.4.1
=======

Processors
==========

* When processor implements the ILifecycleListener interface it will be
  notified of state changes of its associated Node
  
  
Deprecated Components Removed
=============================

The following deprecated components have been removed in this release:

JDBC

org.openadaptor.auxil.connector.jdbc.writer.deprecated.IStatementConverter
org.openadaptor.auxil.connector.jdbc.writer.deprecated.JDBCWriteConnector
org.openadaptor.auxil.connector.jdbc.writer.deprecated.StatementConverter
org.openadaptor.auxil.connector.jdbc.writer.deprecated.orderedmap.AbstractStatementConverter
org.openadaptor.auxil.connector.jdbc.writer.deprecated.orderedmap.CallableStatementConverter
org.openadaptor.auxil.connector.jdbc.writer.deprecated.orderedmap.PreparedStatementTableConverter
org.openadaptor.auxil.connector.jdbc.writer.deprecated.orderedmap.SQLStatementConverter
org.openadaptor.auxil.connector.jdbc.writer.deprecated.orderedmap.TableStatementConverter

org.openadaptor.auxil.connector.jdbc.writer.deprecated.orderedmap.SQLStatementConvertorTestCase

example/spring/connectors/db/writer2.xml
example/spring/connectors/db/writer3.xml

Miscellaneous
=============
 * Clean up of JUnit tests e.g. warnings (unused imports, non-static references to static 
   fields, etc.) have been tidied.

=================================================
openadaptor3 production 3.4 Release Notes

See licence.txt for Licence information.
=================================================

Date: 31st January 2008
Author: openadaptor Core Team

openadaptor 3.4
=======

Summary
=======

This release focuses on improving the documentation, the migration (from 1.x)